@@ -40,6 +40,7 @@
     <Compile Include="UID.cs" />
     <Compile Include="NSDate.cs" />
     <Compile Include="NSArray.cs" />
+    <Compile Include="NSData.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
